grammar.js
    source: ($) => repeat($._statement),

    // -----------------------------------------------------------------------------
    // -                                     Atoms                                 -
    // -----------------------------------------------------------------------------

    // GDScript supports Unicode identifiers: characters with accents or
    // identifiers written in a non-Latin language (Chinese, Japanese, etc.)
    // XID_Start and XID_Continue are Unicode identifier code points
    // \p means "match a Unicode character that is a member of the following
    // category"
    _identifier: ($) => /[_\p{XID_Start}][\p{XID_Continue}]*/u,
    // any "symbol"
    identifier: ($) => $._identifier,
    // named symbol of a statement
    // such as a function name or class name
    name: ($) => $._identifier,
    // Code region syntax, parsed to offer code folding support (these are #region and #endregion marks)
    true: ($) => "true",
    false: ($) => "false",
    string: ($) =>
      seq(
        alias($._string_start, '"'),
        repeat(choice($.escape_sequence, $._string_content)),
        alias($._string_end, '"'),
      ),

    float: ($) => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(
        choice(
          seq(digits, ".", optional(digits), optional(exponent)),
          seq(optional(digits), ".", digits, optional(exponent)),
          seq(digits, exponent),
        ),
      );
    },

    integer: ($) =>
      token(
        choice(
          seq(choice("0x", "0X"), repeat1(/[A-Fa-f0-9]+_?/)),
          seq(choice("0o", "0O"), repeat1(/[0-7]+_?/)),
          seq(choice("0b", "0B"), repeat1(/[0-1]+_?/)),
          repeat1(/[0-9]+_?/),
        ),
      ),

    get_node: ($) =>
      prec.right(
        seq(
          choice(
            seq(
              "$",
              choice(
                alias($.string, "value"),
                seq(
                  optional("/"),
                  $._identifier,
                  repeat(seq("/", $._identifier)),
                ),
              ),
            ),
            seq(
              "%",
              choice(
                alias($.string, "value"),
                seq($._identifier, repeat(seq("/", $._identifier))),
              ),
            ),
          ),
        ),
      ),

    // -----------------------------------------------------------------------------
    // -                                     Type                                  -
    // -----------------------------------------------------------------------------

    // Higher precedence is required to avoid conflicts with the "in" keyword in
    // $.for_statement.
    type: ($) =>
      prec(PREC.type, choice($.attribute, $.identifier, $.subscript)),

    // -----------------------------------------------------------------------------
    // -                                  Statements                               -
    // -----------------------------------------------------------------------------

    _statement: ($) => choice($._simple_statements, $._compound_statement),

    body: ($) =>
      choice(
        $._simple_statements,
        $._inline_compound_statement,
        $._newline,
        $._body_end,
        seq($._indent, repeat($._statement), choice($._body_end, $._dedent)),
      ),

    // Compound statements that are valid inline (same line after `:`). elif and
    // else are not supported by the official compiler (tested in Godot 4.6)
    _inline_compound_statement: ($) =>
      choice(
        alias($._inline_if_statement, $.if_statement),
        $.for_statement,
        $.while_statement,
        $.match_statement,
      ),

    _simple_statements: ($) =>
      seq(
        trailSep1($._simple_statement, repeat1(";")),
        choice($._newline, $._body_end),
      ),

    expression_statement: ($) =>
      choice($._expression, $.assignment, $.augmented_assignment),

    // -- Annotation

    annotation: ($) =>
      prec.right(
        seq("@", $.identifier, optional(field("arguments", $.arguments))),
      ),

    // The syntax tree looks better when annotations are grouped in a container
    // node in contexts like variable_statement and function_definition.
    _annotations: ($) => repeat1($.annotation),
    annotations: ($) => $._annotations,

    // -- Variables

    inferred_type: ($) => choice(":=", seq(":", "=")),

    _variable_assignment: ($) => seq("=", field("value", $._rhs_expression)),
    _variable_inferred_type_assignment: ($) =>
      seq(field("type", $.inferred_type), field("value", $._rhs_expression)),
    _variable_typed_assignment: ($) =>
      seq(":", field("type", $.type), "=", field("value", $._rhs_expression)),

    get_body: ($) =>
      seq(
        "get",
        // Let's alias parameters as an un-named node since
        // get does not take any parameters.
        optional(alias($.parameters, "()")),
        ":",
        field("body", $.body),
      ),

    _setget_body: ($) =>
      seq(
        ":",
        choice(
          $._setget_assign,
          seq(
            $._indent,
            choice(
              seq(field("set", $.set_body), optional(field("get", $.get_body))),
              seq(field("get", $.get_body), optional(field("set", $.set_body))),
              $._setget_assign,
            ),
            $._dedent,
          ),
        ),
      ),

    setget: ($) =>
      choice(
        $._setget_body,
        seq(
          "setget",
          choice($.setter, seq($.setter, ",", $.getter), seq(",", $.getter)),
        ),
      ),

    _variable_statement: ($) =>
      seq(
        optional($.annotations),
        optional(field("static", $.static_keyword)),
        "var",
        field("name", $.name),
        optional(
          choice(
            $._variable_typed_definition,
            $._variable_inferred_type_assignment,
            $._variable_assignment,
          ),
        ),
        optional(field("setget", $.setget)),
      ),

    variable_statement: ($) =>
      seq(optional($.remote_keyword), $._variable_statement),

    const_statement: ($) =>
      seq(
        optional($.annotations),
        "const",
        field("name", $.name),
        choice(
          $._variable_inferred_type_assignment,
          $._variable_typed_assignment,
          $._variable_assignment,
        ),
      ),

    return_statement: ($) => seq("return", optional($._rhs_expression)),

    pass_statement: ($) => prec.left("pass"),
    signal_statement: ($) =>
      seq(
        optional($.annotations),
        "signal",
        field("name", $.name),
        optional(field("parameters", $.parameters)),
      ),

    class_name_statement: ($) =>
      seq(
        optional($.annotations),
        "class_name",
        field("name", $.name),
        optional(seq(",", field("icon_path", $.string))),
        field("extends", optional($.extends_statement)),
      ),

    extends_statement: ($) =>
      prec(
        PREC.type,
        seq(optional($.annotations), "extends", choice($.string, $.type)),
      ),

    if_statement: ($) =>
      seq(
        "if",
        field("condition", $._expression),
        ":",
        field("body", $.body),
        repeat(field("alternative", $.elif_clause)),
        optional(field("alternative", $.else_clause)),
      ),

    // This rule is used to implement inline if statements like `if condition:
    // do_something()`. elif and else blocks are not supported inline, e.g. if
    // true: pass elif false: pass does not parse. That's why this rule exists.
    // Without it, on top of being off spec, the parser gets confused as inline
    // cases are ambiguous (if a: if b: elif c -> what does elif belong to?).
    //
    // We alias this as if_statement so that the AST node type is the same
    // whether it's an inline if or a block.
    elif_clause: ($) =>
      seq(
        "elif",
        field("condition", $._expression),
        ":",
        field("body", $.body),
      ),

    else_clause: ($) => seq("else", ":", field("body", $.body)),

    for_statement: ($) =>
      seq(
        "for",
        field("left", $.identifier),
        optional(seq(":", field("type", $.type))),
        "in",
        field("right", $._expression),
        ":",
        field("body", $.body),
      ),

    while_statement: ($) =>
      seq(
        "while",
        field("condition", $._expression),
        ":",
        field("body", $.body),
      ),

    class_definition: ($) =>
      seq(
        optional($.annotations),
        "class",
        field("name", $.name),
        optional(field("extends", $.extends_statement)),
        ":",
        field("body", $.class_body),
      ),

    class_body: ($) =>
      choice(
        $._class_member,
        $._newline,
        $._body_end,
        seq($._indent, repeat($._class_member), choice($._body_end, $._dedent)),
      ),

    // A class body can only directly contain class members. Then these class
    // members can contain statements in their bodies, but not directly in the
    // class.
    _class_member: ($) =>
      choice($._simple_class_members, $._compound_class_member),

    match_statement: ($) =>
      seq(
        "match",
        field("value", $._expression),
        ":",
        field("body", $.match_body),
      ),

    match_body: ($) =>
      seq(
        $._indent,
        // Annotations are generally supported as statements throughout code but
        // as match blocks are expressions, we need to explicitly allow them
        // here. The pattern section body itself supports statements (thus annotations).
        repeat1(
          seq(
            optional(repeat(seq($.annotation, optional($._newline)))),
            $.pattern_section,
          ),
        ),
        $._dedent,
      ),

    // Sources:
    // - https://github.com/godotengine/godot-proposals/issues/4775
    // - https://github.com/godotengine/godot/pull/80085
    //
    // One guard per section. Meaning Comma separated patterns cannot each have
    // a guard.
    pattern_section: ($) =>
      seq(
        commaSep1($._pattern),
        optional($.pattern_guard),
        ":",
        field("body", $.body),
      ),

    _pattern: ($) =>
      choice(
        $._primary_expression,
        $.conditional_expression,
        $.pattern_binding,
      ),

    // Rather than creating distinct pattern array, dictionary, and expression
    // rules, we insert $.pattern_binding and $.pattern_open_ending into the
    // $.array and $.dictionary rules. Although, they are only valid in the
    // context of a pattern, this keeps the grammar simpler and allows us to
    // have arbitrary expressions in patterns.
    //
    // Additionally, $.dictionary accepts comma separated list of keys mixed
    // with pairs. This is also only valid in patterns and keeps the grammar a
    // bit simpler.
    pattern_open_ending: ($) => seq("..", optional(",")),

    // -----------------------------------------------------------------------------
    // -                                  Expressions                              -
    // -----------------------------------------------------------------------------

    _expression: ($) => choice($._primary_expression, $.conditional_expression),

    _primary_expression: ($) =>
      choice(
        $.binary_operator,
        $.identifier,
        $.string,
        $.integer,
        $.float,
        $.true,
        $.false,
        $.null,
        $.unary_operator,
        $.string_name,
        $.node_path,
        $.get_node,
        $.attribute,
        $.subscript,
        $.base_call,
        $.call,
        $.array,
        $.dictionary,
        $.parenthesized_expression,
        $.await_expression,
      ),

    _rhs_expression: ($) => choice($._expression, $.lambda),

    // This makes an attribute's ast linear
    // When attribute is used inside $.attribute it becomes recursive spaghetti
    _attribute_expression: ($) =>
      prec(
        PREC.attribute_expression,
        choice(
          // Binary op probably shouldn't be in a leading attribute expression.
          // This causes `1 + a.b.c` to parse as `(1 + a.b).c`
          //$.binary_operator,
          // Likewise, unary op does same.
          // $.unary_operator,
          $.identifier,
          $.string,
          $.integer,
          $.float,
          $.true,
          $.false,
          $.null,
          $.node_path,
          $.get_node,
          $.subscript,
          $.base_call,
          $.call,
          $.array,
          $.dictionary,
          $.parenthesized_expression,
        ),
      ),

    // -- Operators

    binary_operator: ($) => {
      // Inspired by tree-sitter-c
      const operators = [
        [seq("not", "in"), PREC.in],
        ["in", PREC.in],
        ["and", PREC.and],
        ["&&", PREC.and],
        ["or", PREC.or],
        ["||", PREC.or],
        ["+", PREC.plus],
        ["-", PREC.plus],
        ["*", PREC.times],
        ["/", PREC.times],
        ["**", PREC.times],
        ["%", PREC.times],
        ["|", PREC.bitwise_or],
        ["&", PREC.bitwise_and],
        ["^", PREC.xor],
        ["<<", PREC.shift],
        [">>", PREC.shift],
        ["<", PREC.compare],
        ["<=", PREC.compare],
        ["==", PREC.compare],
        ["!=", PREC.compare],
        [">=", PREC.compare],
        [">", PREC.compare],
        ["as", PREC.as],
        [seq("is", "not"), PREC.is],
        ["is", PREC.is],
      ];

      const choices = operators.map(([operator, precedence]) => {
        return prec.left(
          precedence,
          seq(
            field("left", $._primary_expression),
            field("op", operator),
            field("right", $._primary_expression),
          ),
        );
      });

      return choice(...choices);
    },

    unary_operator: ($) =>
      choice(
        prec(PREC.unary, seq(choice("not", "!"), $._primary_expression)),
        prec(PREC.unary, seq("-", $._primary_expression)),
        prec(PREC.unary, seq("+", $._primary_expression)),
        prec(PREC.unary, seq("~", $._primary_expression)),
      ),

    // -- Accessors
    subscript_arguments: ($) =>
      seq("[", trailCommaSep1($._rhs_expression), "]"),
    subscript: ($) =>
      // The high precedence resolves ambiguity when parsing a definition
      // followed by code on the same line like class C: var x = my_array[0]
      prec(
        PREC.attribute,
        seq($._primary_expression, field("arguments", $.subscript_arguments)),
      ),

    attribute_call: ($) =>
      prec(PREC.attribute, seq($.identifier, field("arguments", $.arguments))),
    attribute: ($) =>
      prec(
        PREC.attribute,
        seq(
          $._attribute_expression,
          repeat1(
            seq(
              ".",
              choice($.attribute_subscript, $.attribute_call, $.identifier),
            ),
          ),
        ),
      ),

    assignment: ($) =>
      seq(field("left", $._expression), "=", field("right", $._rhs_expression)),

    pair: ($) =>
      seq(
        choice(
          seq(field("left", $._rhs_expression), ":"), // Lambdas are allowed here.
          seq(field("left", choice($.string, $.identifier)), "="),
        ),
        field("value", choice($._rhs_expression, $.pattern_binding)),
      ),

    // See $.pattern_binding for more information.
    dictionary: ($) =>
      seq(
        "{",
        optional(
          trailCommaSep1(
            choice(
              $.pair,
              // This allows dictionaries in pattern sections to support "key"
              // only pattern matching:
              //     match { "key_to_match": some_value }:
              //         { "key_to_match" }: print("Matches here!")
              $._primary_expression,
            ),
          ),
        ),
        optional($.pattern_open_ending),
        "}",
      ),
